Add file serializer, fix template typo

--- a/templates/upload_page.html
+++ b/templates/upload_page.html
@@ -2,7 +2,7 @@
     <head></head>
     <body>
         <p>
-            Conver xml file to json
+            Convert xml file to json
         </p>
         <form action="" enctype="multipart/form-data" method="post">
             {% csrf_token %}
